# kozmic_engine

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: check_graphics_library.cmake  check_system.cmake  check_unicode_support.cmake  get_directory_sources.cmake  get_platform_sources.cmake  target_definitions.cmake
lib/: CMakeLists.txt
lib/include/kozmic/core/graphics/: render_context.h
lib/include/kozmic/core/window/: window.h  window_manager.h
lib/include/kozmic/platform/win32/: win32_utils.h  win32_window.h
lib/src/core/window/: window_manager.cc
lib/src/platform/win32/: win32_utils.cc  win32_window.cc
sandbox/: CMakeLists.txt  main.cc
sandbox/include/kozmic/: win32_utils.h  win32_window.h
sandbox/src/: main.cc  win32_utils.cc  win32_window.cc
